- Extract hard-coded strings - Replace "Yes/No" button by a unique "Ok" button.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     
     <string name="app_name">PlanningPoker</string>
+
+<string name="my_choice">Mon choix :</string>
+<string name="ok">Ok</string>
 </resources>
